--- a/src/pages/product_details.css
+++ b/src/pages/product_details.css
@@ -113,6 +113,24 @@
     width: 40px;
     height: 40px;
 }
+.size1{
+    width: 50%;
+    height: 20rem;
+    padding: 2rem;
+}
+.size2{
+    width: 50%;
+    height: 20rem;
+    padding: 2rem;
+}
+.viewbutton{
+    background-color: #ff5d5d;
+    width: 6rem;
+}
+.viewinput{
+    width: 30rem;
+    height: 10rem;
+}
 .detail-flex-column{
     display: flex;
     flex-direction: column;
