--- a/src/component/Card/CardComponent.css
+++ b/src/component/Card/CardComponent.css
@@ -11,6 +11,10 @@
 .category-card .card {
     width: 465px;
 }
+.flex-11{
+    display: flex;
+    flex-direction: column;
+}
 
 .card {
     height: 335px !important;
