--- a/src/component/HomeMenuCard/HomeMenuCard.css
+++ b/src/component/HomeMenuCard/HomeMenuCard.css
@@ -4,9 +4,12 @@
     margin: 9px 0px 9px 10px;
     text-align: center;
     width: 13.5%;
+
+    height: 100%;
     border-radius: 15px;
     box-shadow: 0px 0px 3px 1px rgb(227, 226, 226);
 }
+
 
 .menu-upper-icon {
     height: 51px;
