--- a/src/layout/Footer.css
+++ b/src/layout/Footer.css
@@ -2,6 +2,8 @@ footer {
   padding: 40px 0;
   min-height: 300px;
   background-color: black;
+  background-image: url("https://media.zenfs.com/en/martha_stewart_living_393/0e298bca6952852966530dae2a17456e");
+  box-shadow: inset 0 0 0 2000px rgba(8, 0, 5, 0.616);
   color: white;
   text-align: center;
 }
