--- a/src/pages/singleproduct.css
+++ b/src/pages/singleproduct.css
@@ -4,7 +4,7 @@
     margin-bottom: 30px;
 }
 
-.sub-category-butt{
+#sub-category-butt{
  background-color:white;
  color: black;
  margin: 10px;
@@ -13,7 +13,7 @@
   padding: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-.sub-category-butt:hover{
+#sub-category-butt:hover{
   transform: scale(1.05);
   opacity: 1;
 }
