--- a/src/pages/singleproduct.css
+++ b/src/pages/singleproduct.css
@@ -7,16 +7,14 @@
 #sub-category-butt{
  background-color:white;
  color: black;
+ border: none;
  margin: 10px;
- border-radius: 20px;
+ height: 55px;
  font-weight: bolder;
   padding: 10px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
-#sub-category-butt:hover{
-  transform: scale(1.05);
-  opacity: 1;
-}
+
 .flex-11{
   display: flex;
   flex-direction: row;
