--- a/src/pages/singleproduct.css
+++ b/src/pages/singleproduct.css
@@ -12,7 +12,8 @@
  height: 55px;
  font-weight: bolder;
   padding: 10px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  
+  box-shadow: grey 4px 4px 14px;
 }
 
 .flex-11{
