--- a/src/pages/singleproduct.css
+++ b/src/pages/singleproduct.css
@@ -10,7 +10,7 @@
  border: none;
  margin: 10px;
  height: 55px;
- font-weight: bolder;
+ font-weight: bold;
   padding: 10px;
   
   box-shadow: grey 4px 4px 14px;
