--- a/src/pages/product_details.css
+++ b/src/pages/product_details.css
@@ -419,6 +419,7 @@ margin-right:0.625rem ;
     flex-direction: column;
     justify-content: center;
    align-content: center;
+   margin-top: 10px;
  
 }
 .div-modl{
