--- a/src/pages/product_details.css
+++ b/src/pages/product_details.css
@@ -341,22 +341,30 @@ margin-right:0.625rem ;
 }
 .detail-mini-box{
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    width: 8.125rem;
+    width: 11.125rem;
+    height: 5rem;
     padding: 0.3125rem;
     margin-bottom: 0.5rem;
     margin-right: 0.375rem;
     margin-top: 0.3125rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   
 
 }
 .boldee{
     font-weight: bolder;
-    margin-left:.3125rem ;
+display: flex;
+justify-content: center;
+text-align: center;
     font-size: small;
+
 }
 .ic-color{
     color: red;
-    margin-left: 3rem;
+   
 }
 .mini-box-size{
     margin-top: 2rem;
@@ -512,4 +520,13 @@ margin-right:0.625rem ;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.bakbtt{
+    border: 1px solid #272626;
+    font-size: small;
+    width: 5rem;
+ padding: 10px 10px 10px 10px;
+    height: 3rem !important;
+    cursor: pointer;
+    margin-right: 1rem;
 }
