--- a/src/pages/product_details.css
+++ b/src/pages/product_details.css
@@ -154,9 +154,9 @@
     width: 30%;
 }
 .flower-img-box{
-    width: 18rem;
+    /* width: 18rem; */
     height: 26rem; 
-    margin-left: 1rem;
+   
   
 }
 .flower-img{
@@ -390,13 +390,16 @@ text-align: center;
     border-radius: 5px;
 }
 .imge{
-    position: absolute;
- 
-   
+    /* position: absolute; */
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: 10px 15px;
+   /* margin-top: 1rem; */
     cursor: none;
     /*Set the size of the magnifier glass:*/
-    width: 380px;
-    height: 380px;
+    width: 100%;
+    height: 100%;
 }
 .modalspan{
     background-color: rgb(52, 85, 19);
